--- a/Sweets.html
+++ b/Sweets.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="screen.css">
   </head>
   <body>
-    <h1>Home</h1>
+    <h1>Sweet Tooth</h1>
     <script src="index.js"></script>
   </body>
 </html>
