--- a/healthybites.html
+++ b/healthybites.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="screen.css">
   </head>
   <body>
-    <h1>Home</h1>
+    <h1>Healthy Bites</h1>
     <script src="index.js"></script>
   </body>
 </html>
