Added recipes and testing video code

--- a/healthybites.html
+++ b/healthybites.html
@@ -5,10 +5,81 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Recipe Magic | Cooking made simple</title>
-    <link rel="stylesheet" href="screen.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Healthy Bites</h1>
+    <header>
+        <h1>Healthy Bites</h1>
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="quickrecipes.html">Quick & Easy Recipes</a></li>
+            <li><a href="Sweets.html">Sweet Recipes</a></li>
+            <li><a href="about.html">About</a></li>
+          </ul>
+        </nav>
+    </header>
+    <section id="blog">
+        <h2>Low Calorie and Fresh Ingredient Recipes</h2>
+        <article class="recipe">
+            <h3>Sriracha Shredded Chicken Tacos</h3>
+            <p><i>Gluten-Free</i></p>
+            <div class ="image-and-text">
+                <img src="images/chickentacos.jpg" alt="Image of Sriracha Shredded Chicken Tacos">
+                <p><strong>Cuisine:</strong> Mexican</p>
+                <p><Strong>Cook Time:</Strong> 30 Minutes</p>
+                <p><Strong>Serving Size:</Strong> 6 Tacos</p>
+                <p><Strong>Calories:</Strong> 128 cal</p>
+                <p><strong>Author:</strong> Christine McMichael</p>
+                <br>
+                <h4>Ingredients</h4>
+                <p>2 thinly sliced chicken breasts</p>
+                <p>2 Tbsp Sriracha</p>
+                <p>6 corn tortillas</p>
+                <p>1 cup chopped red cabbage</p>
+                <p>1/2 cup chopped peppers</p>
+                <p>1/4 cup feta cheese</p>
+                <p>1 lime</p>
+                <br>
+                <h4>Instructions</h4>
+                <p>1. Preheat oven to 375 degrees.</p>
+                <p>2. Place the chicken breasts on a baking sheet and top with Sriracha. Bake for 30 minutes (or until they're fully cooked).</p>
+                <p>3. While the chicken is baking, heat the tortillas up (optional).</p>
+                <p>4. Top each tortilla with chopped red cabbage and chopped peppers.</p>
+                <p>5. When the chicken has finished baking, shred it and place in the tortillas.</p>
+                <p>6. Top each taco with feta cheese and a drizzle of lime. </p>
+            </div>
+        </article>
+
+        <article class = "recipe">
+            <h3>Tomato, Mozzarella & Basil Stuffed Flatbread</h3>
+            <div class ="image-and-text">
+                <p><strong>Cuisine:</strong> Italian</p>
+                <p><strong>Cook Time:</strong> 25 to 40 Minutes</p>
+                <p><strong>Serving Size:</strong> 4</p>
+                <p><strong>Calories:</strong> 744</p>
+                <p><strong>Author:</strong> chef_jonnymarsh</p>
+                <br>
+                <h4>Ingredients</h4>
+                <h5>Homemade Flatbread</h5>
+                <p>200g Self Raising Flour</p>
+                <p>170g Greek Yoghurt</p>
+                <h5>Stuffing</h5>
+                <p>100g Sun-dried Tomatoes</p>
+                <p>50g Chopped Basil</p>
+                <p>50g Cream Cheese</p>
+                <p>50g Grated Mozzarella</p>
+                <p>50g Crumbled Feta</p>
+                <p>Pinch of Salt</p>
+                <h4>Visual Instructions</h4>
+                <div class="video-container">
+                    <iframe width="560" height="315" src="https://www.instagram.com/p/CwHzUx0N4Cj/" frameborder="0" allowfullscreen></iframe>
+                </div>
+
+
+            </div>
+        </article>
+    </section>
     <script src="index.js"></script>
   </body>
 </html>
