--- a/index.html
+++ b/index.html
@@ -5,10 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Recipe Magic | Cooking made simple</title>
-    <link rel="stylesheet" href="screen.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Home</h1>
+    <header>
+      <h1>Home</h1>
+      <nav>
+        <ul>
+          <li><a href="quickrecipes.html">Quick & Easy Recipes</a></li>
+          <li><a href="healthybites.html">Healthy Recipes</a></li>
+          <li><a href="Sweets.html">Sweet Recipes</a></li>
+          <li><a href="about.html">About</a></li>
+        </ul>
+      </nav>
+  </header>
+  <section id="blog">
+    <h2></h2>
+  </section>
     <script src="index.js"></script>
   </body>
 </html>
