--- a/quickrecipes.html
+++ b/quickrecipes.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="screen.css">
   </head>
   <body>
-    <h1>Quick & Easy Recipes</h1>
+    <header>
+        <h1>Healthy Bites</h1>
+    </header>
     <script src="index.js"></script>
   </body>
 </html>
