Healthy Bites page done

--- a/healthybites.html
+++ b/healthybites.html
@@ -54,17 +54,18 @@
         <article class = "recipe">
             <h3>Tomato, Mozzarella & Basil Stuffed Flatbread</h3>
             <div class ="image-and-text">
+                <img src="images/flatbread.jpg" alt="Image of Tomato, Mozzarella, & Basil Stuffed Flatbread">
                 <p><strong>Cuisine:</strong> Italian</p>
                 <p><strong>Cook Time:</strong> 25 to 40 Minutes</p>
                 <p><strong>Serving Size:</strong> 4</p>
                 <p><strong>Calories:</strong> 744</p>
-                <p><strong>Author:</strong> chef_jonnymarsh</p>
+                <p><strong>Author:</strong> @chef_jonnymarsh</p>
                 <br>
                 <h4>Ingredients</h4>
-                <h5>Homemade Flatbread</h5>
+                <p><strong>Homemade Flatbread</strong></p>
                 <p>200g Self Raising Flour</p>
                 <p>170g Greek Yoghurt</p>
-                <h5>Stuffing</h5>
+                <p><strong>Stuffing</strong></p>
                 <p>100g Sun-dried Tomatoes</p>
                 <p>50g Chopped Basil</p>
                 <p>50g Cream Cheese</p>
@@ -73,10 +74,50 @@
                 <p>Pinch of Salt</p>
                 <h4>Visual Instructions</h4>
                 <div class="video-container">
-                    <iframe width="560" height="315" src="https://www.instagram.com/p/CwHzUx0N4Cj/" frameborder="0" allowfullscreen></iframe>
+                    <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/CwHzUx0N4Cj/" data-instgrm-version="13" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
+                        <div style="padding:16px;">
+                            <a href="https://www.instagram.com/p/CwHzUx0N4Cj/" style=" color:#000; font-family:'Arial', sans-serif; font-size:14px; font-style:normal; font-weight:normal; line-height:17px; text-decoration:none; word-wrap:break-word;" target="_blank"></a>
+                        </div>
+                    </blockquote>
+                    <script async defer src="//www.instagram.com/embed.js"></script>
                 </div>
-
-
+            </div>
+        </article>
+        <article class="recipe">
+            <h3>Low Calorie Honey Buffalo Tenders</h3>
+            <div class="image-and-text">
+                <img src="images/tenders.jpg" alt="Image of Honey Buffalo Chicken Tenders with celery on the side">
+                <p><strong>Cuisine:</strong> American</p>
+                <p><strong>Cook Time:</strong> 45 Minutes </p>
+                <p><strong>Serving Size:</strong> 10</p>
+                <p><strong>Calories:</strong> 99 Calories</p>
+                <p><strong>Author:</strong> @gymhealthu</p>
+                <br>
+                <h4>Ingredients</h4>
+                <p><strong>Chicken</strong></p>
+                <p>500g chicken breasts</p>
+                <p>Salt</p>
+                <p>Cajun Seasoning</p>
+                <p>Paprika</p>
+                <p><strong>Egg Wash</strong></p>
+                <p>2 eggs</p>
+                <p>1/2 tbsp buffalo sauce</p>
+                <p><strong>Breading</strong></p>
+                <p>80g cornflakes</p>
+                <p>1/2 tsp cayenne pepper</p>
+                <p>1 tbsp paprika</p>
+                <p><strong>Sauce</strong></p>
+                <p>100ml buffalo sauce</p>
+                <p>25g honey</p>
+                <h4>Visual Instructions</h4>
+                <div class="video-container">
+                    <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/CtHa0eou65d/" data-instgrm-version="13" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
+                        <div style="padding:16px;">
+                            <a href="https://www.instagram.com/p/CtHa0eou65d/" style=" color:#000; font-family:'Arial', sans-serif; font-size:14px; font-style:normal; font-weight:normal; line-height:17px; text-decoration:none; word-wrap:break-word;" target="_blank"></a>
+                        </div>
+                    </blockquote>
+                    <script async defer src="//www.instagram.com/embed.js"></script>
+                </div>
             </div>
         </article>
     </section>
