Added recipes to all pages

--- a/Sweets.html
+++ b/Sweets.html
@@ -5,10 +5,137 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Recipe Magic | Cooking made simple</title>
-    <link rel="stylesheet" href="screen.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Sweet Tooth</h1>
+    <header>
+      <h1>Desserts</h1>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="Sweets.html">Dessert Recipes</a></li>
+          <li><a href="healthybites.html">Healthy Recipes</a></li>
+          <li><a href="quickrecipes.html">Quick & Easy Recipes</a></li>
+          <li><a href="about.html">About</a></li>
+        </ul>
+      </nav>
+  </header>
+  <section id="blog">
+    <h2>Satisfy Your Sweet Tooth Cravings</h2>
+    <article class="recipe">
+      <h3>Cinnamon French Toast Rolls</h3>
+      <div class="image-and-text">
+        <img src="images/rolls.jpg" alt="Image of the Cinnamon French Toast Rolls with icing">
+        <p><strong>Cuisine:</strong> American/Eurpoean</p>
+        <p><strong>Cook Time:</strong> 15 minutes</p>
+        <p><strong>Serving Serving:</strong> 4</p>
+        <p><strong>Calories:</strong> 627 - 777 cals</p>
+        <p><strong>Author:</strong>@may.kawaiikitchen</p>
+        <br>
+        <h4>Ingredients</h4>
+        <p><strong>Cinnamon Butter Mixture</strong></p>
+        <p>35g butter</p>
+        <p>25g brown sugar</p>
+        <p>1/2 tbsp cinnamon powder</p>
+        <br>
+        <p><strong>Wet Mixture</strong></p>
+        <p>1 Egg</p>
+        <p>1/2 cup of milk</p>
+        <p>1/4 tsp vanilla extract</p>
+        <br>
+        <p><strong>Cinnamon Sugar Mixture</strong></p>
+        <p>3 tbsp sugar</p>
+        <p>1/2 tbsp cinnamon</p>
+        <br>
+        <p><strong>Optional</strong></p>
+        <p>Nutella</p>
+        <p>Sugar Icing</p>
+        <br>
+        <h4>Visual Instructions</h4>
+        <div class="video-container">
+          <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/CxMCLoWSI7t/" data-instgrm-version="13" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
+              <div style="padding:16px;">
+                  <a href="https://www.instagram.com/p/CxMCLoWSI7t/" style=" color:#000; font-family:'Arial', sans-serif; font-size:14px; font-style:normal; font-weight:normal; line-height:17px; text-decoration:none; word-wrap:break-word;" target="_blank"></a>
+              </div>
+          </blockquote>
+          <script async defer src="//www.instagram.com/embed.js"></script>
+      </div>
+      </div>
+    </article>
+    <article class="recipe">
+      <h3>Sticky Toffee Pudding</h3>
+      <div class="image-and-text">
+        <img src="images/toffee.jpg" alt="Image of sticky toffee pudding">
+        <p><strong>Cuisine:</strong> British</p>
+        <p><strong>Cook Time:</strong> 15 Minutes</p>
+        <p><strong>Serving Size:</strong> 4</p>
+        <p><strong>Calories:</strong> 555 cal</p>
+        <p><strong>Author:</strong> Good Food Team</p>
+        <br>
+        <h4>Ingredients</h4>
+        <p><strong>Main Course</strong></p>
+        <p>4 large chocolate muffins, crumbled</p>
+        <p>50g large sultanas</p>
+        <p>small knob of butter, for greasing</p>
+        <br>
+        <p><strong>Sauce</strong></p>
+        <p>50g light muscovado sugar</p>
+        <p>50g butter</p>
+        <p>75ml double cream</p>
+        <p>vanilla ice cream, served on top</p>
+        <br>
+        <h4>Instructions</h4>
+        <p>Heat oven to 200C/180C fan/gas 6.</p>
+        <p>Mix the muffins with the sultanas.</p>
+        <p>Divide between 4 buttered ramekins or one baking dish.</p>
+        <p>Cover with foil and bake for 8 mins until just warmed through.</p>
+        <p>Place the sugar, butter and cream in a small pan and gently heat together, stirring until the sugar dissolves.</p>
+        <p>Pour the sauce over the muffin mixture and serve warm with ice cream.</p>
+      </div>
+    </article>
+    <article class="recipe">
+      <h3>Creamsicles</h3>
+      <div class="image-and-text">
+        <img src="images/creamsicles.jpg" alt="Image of the Creamsicles.">
+        <p><strong>Cuisine:</strong> American</p>
+        <p><strong>Cook Time:</strong> 8hrs 10mins</p>
+        <p><strong>Serving Size:</strong> 10</p>
+        <p><strong>Calories:</strong> 296</p>
+        <p><strong>Author:</strong> Mary Rupp</p>
+        <br>
+        <h4>Ingredients</h4>
+        <p><strong>Orange Base</strong></p>
+        <p>12oz frozen orange juice concentrate</p>
+        <p>1/2 cup heavy cream</p>
+        <p>1/4 cup granulated sugar</p>
+        <p>1/2 tsp pure vanilla extract</p>
+        <p>1/8 tsp kosher salt</p>
+        <p>Orange food color is optional</p>
+        <br>
+        <p><strong>Vanilla Yoghurt Base & Assembly</strong></p>
+        <p>1 cup full-fat plain yoghurt</p>
+        <p>1 cup heavy cream</p>
+        <p>1/4 cup granulated sugar</p>
+        <p>1 tsp pure vanilla extract</p>
+        <p>1/8 tsp kosher salt</p>
+        <br>
+        <h4>Instructions</h4>
+        <p><strong>Orange Base</strong></p>
+        <p>In a blender, blend orange juice concentrate, cream, granulated sugar, vanilla, and salt on medium-low speed until combined.</p>
+        <p>Add a little bit of food coloring (if using) and continue to blend until desired color is reached. Transfer to a medium bowl. Cover and refrigerate until ready to use. </p>
+        <br>
+        <p><strong>Vanilla Yoghurt Base & Assembly</strong></p>
+        <p>In another medium bowl, whisk yogurt, cream, granulated sugar, vanilla, and salt. Cover and refrigerate until ready to use.</p>
+        <p>Pour 1 heaping tablespoon yogurt base into a 3-oz. ice pop mold, then pour in 1 tablespoon orange base.</p>
+        <p>Repeat with yogurt and orange bases until you have 10 ice pops.</p>
+        <p>Cover and insert sticks.</p>
+        <p>Freeze until firm, at least 8 hours or up to overnight.</p>
+        <p>Dip molds briefly into warm water to release pops.</p>
+
+
+      </div>
+    </article>
+  </section>
     <script src="index.js"></script>
   </body>
 </html>
