--- a/healthybites.html
+++ b/healthybites.html
@@ -13,8 +13,9 @@
         <nav>
           <ul>
             <li><a href="index.html">Home</a></li>
+            <li><a href="Sweets.html">Dessert Recipes</a></li>
+            <li><a href="healthybites.html">Healthy Recipes</a></li>
             <li><a href="quickrecipes.html">Quick & Easy Recipes</a></li>
-            <li><a href="Sweets.html">Sweet Recipes</a></li>
             <li><a href="about.html">About</a></li>
           </ul>
         </nav>
@@ -65,6 +66,7 @@
                 <p><strong>Homemade Flatbread</strong></p>
                 <p>200g Self Raising Flour</p>
                 <p>170g Greek Yoghurt</p>
+                <br>
                 <p><strong>Stuffing</strong></p>
                 <p>100g Sun-dried Tomatoes</p>
                 <p>50g Chopped Basil</p>
@@ -72,6 +74,7 @@
                 <p>50g Grated Mozzarella</p>
                 <p>50g Crumbled Feta</p>
                 <p>Pinch of Salt</p>
+                <br>
                 <h4>Visual Instructions</h4>
                 <div class="video-container">
                     <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/CwHzUx0N4Cj/" data-instgrm-version="13" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
@@ -99,16 +102,20 @@
                 <p>Salt</p>
                 <p>Cajun Seasoning</p>
                 <p>Paprika</p>
+                <br>
                 <p><strong>Egg Wash</strong></p>
                 <p>2 eggs</p>
                 <p>1/2 tbsp buffalo sauce</p>
+                <br>
                 <p><strong>Breading</strong></p>
                 <p>80g cornflakes</p>
                 <p>1/2 tsp cayenne pepper</p>
                 <p>1 tbsp paprika</p>
+                <br>
                 <p><strong>Sauce</strong></p>
                 <p>100ml buffalo sauce</p>
                 <p>25g honey</p>
+                <br>
                 <h4>Visual Instructions</h4>
                 <div class="video-container">
                     <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/CtHa0eou65d/" data-instgrm-version="13" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
