--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
       <h1>Home</h1>
       <nav>
         <ul>
-          <li><a href="quickrecipes.html">Quick & Easy Recipes</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="Sweets.html">Dessert Recipes</a></li>
           <li><a href="healthybites.html">Healthy Recipes</a></li>
-          <li><a href="Sweets.html">Sweet Recipes</a></li>
+          <li><a href="quickrecipes.html">Quick & Easy Recipes</a></li>
           <li><a href="about.html">About</a></li>
         </ul>
       </nav>
