--- a/quickrecipes.html
+++ b/quickrecipes.html
@@ -5,12 +5,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Recipe Magic | Cooking made simple</title>
-    <link rel="stylesheet" href="screen.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
-        <h1>Healthy Bites</h1>
-    </header>
+      <h1>Quick & Easy Recipes</h1>
+      <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="Sweets.html">Dessert Recipes</a></li>
+            <li><a href="healthybites.html">Healthy Recipes</a></li>
+            <li><a href="quickrecipes.html">Quick & Easy Recipes</a></li>
+            <li><a href="about.html">About</a></li>
+        </ul>
+      </nav>
+  </header>
+  <section id="blog">
+    <h2>Sweet Tooth Cravings</h2>
+    <article class="recipe">
+      <h3>Apple Crisp</h3>
+      <div class="image-and-text">
+        <img src="images/applecrisp.jpg" alt="Image of apple crisp w/ icecream and Caramel drizzle.">
+        <p><strong>Cuisine:</strong> American</p>
+        <p><strong>Cook Time:</strong> 10 minutes</p>
+        <p><strong>Serving Serving:</strong> Single</p>
+        <p><strong>Calories:</strong> 713 cals</p>
+        <p><strong>Author:</strong> @essential_everyday</p>
+        <br>
+        <h4>Ingredient</h4>
+        <p><strong>Filling</strong></p>
+        <p>1 apple, peeled & diced</p>
+        <p>1 tsbp butter, cut into small cubes</p>
+        <p>2 tbsp brown sugar</p>
+        <p>1 tsp cornstarch</p>
+        <p>1/2 tsp cinnamon</p>
+        <p><strong>Topping</strong></p>
+        <p>2 tbsp butter, softened</p>
+        <p>2 tbsp brown sugar</p>
+        <p>2 tbsp Essential Everyday Quick 1 Minute Oats</p>
+        <p>2 tbsp flour</p>
+        <p>1/2 tsp cinnamon</p>
+        <p><strong>Optional</strong></p>
+        <p>Add a scoop of ice cream</p>
+        <p>Add Caramel drizzle</p>
+        <h4>Visual Instructions</h4>
+        <div class="video-container">
+            <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/Cw8FMdBr2bZ/" data-instgrm-version="13" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
+                <div style="padding:16px;">
+                    <a href="https://www.instagram.com/p/Cw8FMdBr2bZ/" style=" color:#000; font-family:'Arial', sans-serif; font-size:14px; font-style:normal; font-weight:normal; line-height:17px; text-decoration:none; word-wrap:break-word;" target="_blank"></a>
+                </div>
+            </blockquote>
+            <script async defer src="//www.instagram.com/embed.js"></script>
+        </div>
+      </div>
+    </article>
+    <article class="recipe">
+        <h3></h3>
+        <div class="image-and-text">
+
+        </div>
+    </article>
+  </section>
     <script src="index.js"></script>
   </body>
 </html>
