--- a/Sweets.html
+++ b/Sweets.html
@@ -136,6 +136,9 @@
       </div>
     </article>
   </section>
+  <footer>
+    <p>&copy; 2023 Recipe Magic</p>
+  </footer>
     <script src="index.js"></script>
   </body>
 </html>
