--- a/quickrecipes.html
+++ b/quickrecipes.html
@@ -39,15 +39,18 @@
         <p>2 tbsp brown sugar</p>
         <p>1 tsp cornstarch</p>
         <p>1/2 tsp cinnamon</p>
+        <br>
         <p><strong>Topping</strong></p>
         <p>2 tbsp butter, softened</p>
         <p>2 tbsp brown sugar</p>
         <p>2 tbsp Essential Everyday Quick 1 Minute Oats</p>
         <p>2 tbsp flour</p>
         <p>1/2 tsp cinnamon</p>
+        <br>
         <p><strong>Optional</strong></p>
         <p>Add a scoop of ice cream</p>
         <p>Add Caramel drizzle</p>
+        <br>
         <h4>Visual Instructions</h4>
         <div class="video-container">
             <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/Cw8FMdBr2bZ/" data-instgrm-version="13" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
@@ -60,12 +63,60 @@
       </div>
     </article>
     <article class="recipe">
-        <h3></h3>
+        <h3>Bacon Lettuce Tomato Sandwich &lpar;Developer Edition&rpar;</h3>
         <div class="image-and-text">
-
+            <img src="images/blt.png" alt="Image of BLT">
+            <p><strong>Cuisine:</strong> American</p>
+            <p><strong>Cook Time:</strong>15 minutes</p>
+            <p><strong>Serving Size:</strong> 2</p>
+            <p><strong>Calories:</strong> 1075 cals</p>
+            <p><strong>Author:</strong> Jackson Brinn</p>
+            <br>
+            <h4>Ingredients</h4>
+            <p>4 slices of StoneHouse Bread Asiago Sourdough</p>
+            <p>2 thin slices of tomato</p>
+            <p>Bag shredded lettuce</p>
+            <p>Bottle of mayo</p>
+            <p>Butter</p>
+            <br>
+            <h4>Instructions</h4>
+            <p>Turn the stove to medium high heat.</p>
+            <p>Butter both sides of the bread and then place in pan.</p>
+            <p>Done when golden brown.</p>
+            <p>Place the bacon in pan and cook to preference.<p>
+            <p>While bacon is cooking, spread a light layer of mayo on one side of the bread on all four slices.</p>
+            <p>Slice the tomato and place on the mayo side of bread and add lettuce.</p>
+            <p>When bacon is done, add the bacon to the sandwich. Enjoy!</p>
+        </div>
+    </article>
+    <article class="recipe">
+        <h3>Grilled Cheese</h3>
+        <div class="image-and-text">
+            <img src="images/grilled.jpg" alt="Images of Grilled Cheese">
+            <p><strong>Cuisine:</strong> American</p>
+            <p><strong>Cook Time:</strong> 15 mins</p>
+            <p><strong>Serving Size:</strong> 2</p>
+            <p><strong>Calories:</strong> 400</p>
+            <p><strong>Author:</strong> Sara</p>
+            <br>
+            <h4>Ingredients</h4>
+            <p>4 slices white bread</p>
+            <p>3 tbsp butter</p>
+            <p>2 slices of cheddar cheese</p>
+            <br>
+            <h4>Instructions</h4>
+            <p>Preheat a nonstick skillet over medium heat.</p> 
+            <p>Generously butter one side of a slice of bread.</p>
+            <p>Place bread butter-side down in the hot skillet; add 1 slice of cheese.</p>
+            <p>Butter a second slice of bread on one side and place butter-side up on top of cheese.</p>
+            <p>Cook until lightly browned on one side; flip over and continue cooking until cheese is melted.</p>
+            <p>Repeat with remaining 2 slices of bread, butter, and slice of cheese.</p>
         </div>
     </article>
   </section>
+  <footer>
+    <p>&copy; 2023 Recipe Magic</p>
+  </footer>
     <script src="index.js"></script>
   </body>
 </html>
