--- a/healthybites.html
+++ b/healthybites.html
@@ -128,6 +128,9 @@
             </div>
         </article>
     </section>
+    <footer>
+        <p>&copy; 2023 Recipe Magic</p>
+    </footer>
     <script src="index.js"></script>
   </body>
 </html>
