A whole lot of changes

--- a/about.html
+++ b/about.html
@@ -9,10 +9,12 @@
   </head>
   <body>
     <header>
+      <div class="logo-image">
+        <img src="images/Group 4 (1).png" alt="Image of company logo">
+      </div>
       <h1>About Us</h1>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
           <li><a href="Sweets.html">Dessert Recipes</a></li>
           <li><a href="healthybites.html">Healthy Recipes</a></li>
           <li><a href="quickrecipes.html">Quick & Easy Recipes</a></li>
@@ -29,7 +31,7 @@
 
         <h2>Meet Our Team</h2>
         <div class="team-member">
-            <img src="images/team-member1.jpg" alt="Jackson Brinn">
+            <img src="images/me.jpg" alt="Jackson Brinn">
             <h3>Jackson Brinn</h3>
             <p>Founder</p>
             <p>Jackson is an inexperienced cook, who cooks for himself and his girlfriend on occasion. He doesn't have enough time to master the art of cooking, instead he's mastering the art of website development. However, he still wants a simple place to store recipes he likes that he finds around the internet that are easy-to-follow and tasty. Thus bring him the urge to create this website for his portfolio and create something meaningful to his life.</p>
@@ -66,6 +68,7 @@
         </form>
     </section>
     <footer>
+      <p>Contact: Jackson.Brinn@gmail.com</p>
         <p>&copy; 2023 Recipe Magic</p>
     </footer>
 </body>
