--- a/healthybites.html
+++ b/healthybites.html
@@ -9,10 +9,12 @@
   </head>
   <body>
     <header>
+        <div class="logo-image">
+            <img src="images/Group 4 (1).png" alt="Image of company logo">
+        </div>
         <h1>Healthy Bites</h1>
         <nav>
           <ul>
-            <li><a href="index.html">Home</a></li>
             <li><a href="Sweets.html">Dessert Recipes</a></li>
             <li><a href="healthybites.html">Healthy Recipes</a></li>
             <li><a href="quickrecipes.html">Quick & Easy Recipes</a></li>
@@ -129,6 +131,7 @@
         </article>
     </section>
     <footer>
+        <p>Contact: Jackson.Brinn@gmail.com</p>
         <p>&copy; 2023 Recipe Magic</p>
     </footer>
     <script src="index.js"></script>
